kubernetes/apps/kube-system/minio/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: kube-system
  annotations:
    hajimari.io/enable: "true"
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN},"s3.${SECRET_DOMAIN}"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-default@kubernetescrd
    #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "minio.${SECRET_DOMAIN}"
        - "s3.${SECRET_DOMAIN}"
      secretName: "minio-tls"
  rules:
    - host: "minio.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
    - host: "s3.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3
                port:
                  number: 9000

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minio
#   namespace: kube-system
#   annotations:
#     hajimari.io/enable: "true"
#     external-dns.home.arpa/enabled: "true"
#     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
#     external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN}
#     cert-manager.io/cluster-issuer: "letsencrypt-production"
#     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
# spec:
#   ingressClassName: "traefik"
#   tls:
#     - hosts:
#         - "minio.${SECRET_DOMAIN}"
#       secretName: "minio-tls"
#   rules:
#     - host: "minio.${SECRET_DOMAIN}"
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: minio
#                 port:
#                   number: 9001
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minio-s3
#   namespace: kube-system
#   annotations:
#     hajimari.io/enable: "true"
#     external-dns.home.arpa/enabled: "true"
#     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
#     external-dns.alpha.kubernetes.io/hostname: s3.${SECRET_DOMAIN}
#     cert-manager.io/cluster-issuer: "letsencrypt-production"
#     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
# spec:
#   ingressClassName: "traefik"
#   tls:
#     - hosts:
#         - "s3.${SECRET_DOMAIN}"
#       secretName: "s3-tls"
#   rules:
#     - host: "s3.${SECRET_DOMAIN}"
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: s3
#                 port:
#                   number: 9000
